# print-my-bridge

./: .gitignore  README.md  build-all.sh  print-my-bridge.toml
.github/workflows/: build.yml  publish.yml  release.yml
src-tauri/: Cargo.toml  print-my-bridge.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/api/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/error/: mod.rs
src-tauri/src/gui/: mod.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/printer/: mod.rs
ui/: index.html  script.js  style.css
